<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        android:title="@string/menu_new_profile">
        <menu>
            <item
                android:id="@+id/menu_add_sms"
                android:title="@string/menu_new_profile_sms" />
            <item
                android:id="@+id/menu_add_phone"
                android:title="@string/menu_new_profile_phone" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_action_sort"
        android:showAsAction="ifRoom"
        android:title="@string/menu_sort" />
    <item
        android:id="@+id/menu_dev_tools"
        android:icon="@drawable/ic_action_dev_tools"
        android:showAsAction="ifRoom"
        android:title="@string/menu_dev_tools"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/menu_dev_sms"
                android:title="Broadcast SMS" />
            <item
                android:id="@+id/menu_dev_phone"
                android:title="Broadcast missed call" />
        </menu>
    </item>

</menu>