<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_save" />
    <item
        android:id="@+id/menu_discard"
        android:icon="@drawable/ic_action_cancel"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_discard" />
    <item
        android:id="@+id/menu_rename"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="never"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="never"
        android:title="@string/menu_delete" />

</menu>