<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:id="@+id/general_preferences"
        android:fragment="com.mattprecious.prioritysms.preferences.GeneralPreferenceFragment"
        android:icon="@drawable/ic_settings_general"
        android:title="@string/preference_header_general" />
    <header
        android:id="@+id/alarm_preferences"
        android:fragment="com.mattprecious.prioritysms.preferences.AlarmPreferenceFragment"
        android:icon="@drawable/ic_settings_alarm"
        android:title="@string/preference_header_alarm" />
    <header
        android:id="@+id/advanced_preferences"
        android:fragment="com.mattprecious.prioritysms.preferences.AdvancedPreferenceFragment"
        android:icon="@drawable/ic_settings_advanced"
        android:title="@string/preference_header_advanced" />
    <header
        android:id="@+id/about_preferences"
        android:fragment="com.mattprecious.prioritysms.preferences.AboutPreferenceFragment"
        android:icon="@drawable/ic_settings_about"
        android:title="@string/preference_header_about" />

</preference-headers>